--- a/src/assets/demo/demo.css
+++ b/src/assets/demo/demo.css
@@ -115,6 +115,16 @@
   zoom: 90% !important;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.img-fit {
+  width: 30rem;
+  height: 10rem;
+  object-fit: fill;
+}
+
 .navigation-example .img-src {
   background-attachment: scroll;
 }
