--- a/src/assets/demo/demo.css
+++ b/src/assets/demo/demo.css
@@ -125,6 +125,12 @@
   object-fit: fill;
 }
 
+.img-fit-index {
+  width: 30rem;
+  height: 15rem;
+  object-fit: fill;
+}
+
 .navigation-example .img-src {
   background-attachment: scroll;
 }
