--- a/src/assets/demo/demo.css
+++ b/src/assets/demo/demo.css
@@ -82,6 +82,17 @@
   font-size: 30px;
 }
 
+.navbar p {
+  color: #666666;
+  font-size: 0.73rem;
+}
+
+.sidebar-collapse .navbar-collapse:before {
+  background: white;
+  opacity: 1;
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 15%);
+}
+
 .space {
   height: 130px;
   display: block;
@@ -117,6 +128,10 @@
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.navbar-logo {
+  height: 2.8rem;
 }
 
 .img-fit {
